# fo4CS

./: .clangd  .gitignore  .gitmodules  BuildReleasePostAE.bat  BuildReleasePostNG.bat  BuildReleasePreNG.bat  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: FSR30.cmake  FeatureVersions.h.in  Plugin.h.in  Version.rc.in  XSEPlugin.cmake
include/: OverlayAPI.h  PCH.h  PostAECompat.h  ffx_api.h  ffx_api.hpp  ffx_api_loader.h  ffx_api_types.h  ffx_framegeneration.h  ffx_framegeneration.hpp  ffx_framegeneration_api_types.h  ffx_upscale.h  ffx_upscale.hpp
include/dx12/: ffx_api_dx12.h  ffx_api_dx12.hpp  ffx_api_framegeneration_dx12.h  ffx_api_framegeneration_dx12.hpp
package/Common/F4SE/Plugins/FidelityFX/: README.txt
package/Common/F4SE/Plugins/Streamline/: README.txt
package/CommunityShaders/F4SE/Plugins/CommunityShaders/: CommunityShaders.ini  LightLimitFix.ini  README.txt
package/CommunityShaders/F4SE/Plugins/CommunityShaders/ShaderDB/: README.txt
package/CommunityShaders/F4SE/Plugins/CommunityShaders/ShaderDB/Common/Pixel/PLACEHOLDER_light_ps/: PLACEHOLDER_light_ps.txt
package/CommunityShaders/F4SE/Plugins/CommunityShaders/Shaders/LightLimitFix/: ClusterCullingCS.hlsl
package/CommunityShaders/F4SE/Plugins/fo4CS/: README.txt
package/CommunityShaders/MCM/Config/CommunityShaders/: config.json  settings.ini
package/F4SE/Plugins/Streamline/: README.txt
package/FrameGen/F4SE/Plugins/FrameGen/: BuildReticleUIColorAndAlphaCS.hlsl  BuildUIColorAndAlphaCS.hlsl  CopyDepthToSharedBufferCS.hlsl  DenoiseUIAlphaCS.hlsl  FrameGen.ini  GenerateSharedBuffersCS.hlsl  PatchHUDLessReticleCS.hlsl
package/FrameGen/MCM/Config/FrameGen/: config.json  settings.ini
package/HDR/F4SE/Plugins/HDR/: HDR.ini
package/HDR/MCM/Config/HDR/: config.json  settings.ini
package/Reflex/F4SE/Plugins/Reflex/: Reflex.ini
package/Reflex/MCM/Config/Reflex/: config.json  settings.ini
package/Shaders/: Lighting.hlsl
package/Shaders/LightLimitFix/: ClusterBuildingCS.hlsl  ClusterCullingCS.hlsl  Common.hlsli  LightLimitFix.hlsli  LightingPS.hlsl
package/Upscaler/F4SE/Plugins/: Upscaler.ini
package/Upscaler/F4SE/Plugins/Upscaler/: CopyDepthVS.hlsl  Upscaler.ini
package/Upscaler/MCM/Config/Upscaler/: config.json  settings.ini
scripts/: BuildReleasePostAE.bat  BuildReleasePostNG.bat  BuildReleasePreNG.bat  generate_shaderdb.py
src/: AIOPlugin.cpp  Buffer.h  CommunityShadersPlugin.cpp  DX11Hooks.cpp  DX11Hooks.h  DX12SwapChain.cpp  DX12SwapChain.h  FidelityFX.cpp  FidelityFX.h  FidelityFX_DX11.cpp  FidelityFX_DX11.h  FrameGenPlugin.cpp  HDR.cpp  HDR.h  HDRCalibration.cpp  HDRCalibration.h  HDRCalibration.hlsl  HDRColorSpace.hlsl  HDRPlugin.cpp  OverlayPlugin.cpp  PluginCommon.h  ReflexPlugin.cpp  Streamline.cpp  Streamline.h  Upscaler.cpp  Upscaler.h  UpscalerPlugin.cpp  UpscalerRenderBackend.cpp  Upscaling.cpp  UpscalingPlugin.cpp  XSEPlugin.cpp
src/Core/: BSShaderHooks.cpp  BSShaderHooks.h  CommunityShaders.cpp  CommunityShaders.h  Deferred.cpp  Deferred.h  Feature.cpp  Feature.h  FeatureBuffer.cpp  FeatureBuffer.h  FeatureCategories.h  FeatureConstraints.cpp  FeatureConstraints.h  FeatureIssues.h  Globals.cpp  Globals.h  Hooks.cpp  Hooks.h  IMenuItem.h  Menu.cpp  Menu.h  MenuRegistry.h  ShaderCache.cpp  ShaderCache.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderDB.cpp  ShaderDB.h  State.cpp  State.h
src/Diagnostics/: HangTrace.h
src/Features/: FrameGeneration.cpp  FrameGeneration.h  HDRDisplay.cpp  HDRDisplay.h  LightLimitFix.cpp  LightLimitFix.h  Overlay.cpp  Overlay.h  Reflex.cpp  Reflex.h  ShaderDump.cpp  ShaderDump.h  ShaderDumpFeature.cpp  ShaderDumpFeature.h  Upscaling.cpp  Upscaling.h
src/Overlay/: Overlay.cpp  Overlay.h  OverlaySettings.h  OverlayShaderDump.h  OverlayWndProc.h
src/RE/: CameraData.h  SingletonAccessors.h
